# ground-station

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
api/: Dockerfile  README.md  pyproject.toml
api/gs_api/: __init__.py  app.py  auth.py  clients.py  colony_client.py  com_client.py  settings.py
api/gs_api/proto/: supervisor_view.proto  ucm_view.proto
api/gs_api/routers/: campaign.py  deployments.py  devices.py  planes.py  ucm.py
contrib/: README.md  mcp_gs.py
docs/: BACKLOG.md
docs/design/: gs-ux-design.md  gs-ux-plan.md
fleet/: campaign.sh  fleet.py
mender/artifact/: build-artifact.sh
mender/runtime/: seed-official.sh
mender/server/: docker-compose.override.yml  enroll-rig.sh  up.sh
tools/: gs.py  mender_check.py
web/: Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  api.js  index.css
web/src/components/: CreateTargetModal.jsx
web/src/views/: Deployment.jsx  Deployments.jsx  Devices.jsx  Distributions.jsx  Fleet.jsx  Releases.jsx  Rollout.jsx  Rollouts.jsx  Vendoring.jsx
