[project]
name = "gs-api"
version = "0.1.0"
description = "Theia ground-station fleet operator backend (FastAPI over Mender + the distribution planes)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "boto3>=1.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gs_api*"]
